<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_previous"
        android:enabled="true"
        android:icon="@drawable/ic_action_previous"
        android:title="@string/previous"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_next"
        android:enabled="true"
        android:icon="@drawable/ic_action_next"
        android:title="@string/next"
        app:showAsAction="ifRoom" />
</menu>